--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -51,7 +51,8 @@ body
       z-index: 2
       background: $accent-blue
       height: $modal-label-height
-      width: 165px
+      width: auto
+      padding: 0 5px
 
       p
         line-height: $modal-label-height
@@ -68,6 +69,7 @@ body
         padding: 0
         padding-top: $modal-label-height + 25px
         background: $background-dark
+        overflow-y: scroll
 
         .secondary-nav
           h4
@@ -81,7 +83,7 @@ body
 
           li
             position: relative
-            margin: 0 10px
+            margin: 10px
             padding: 10px 15px
             background: $background-light
             border-radius: 5px
@@ -101,14 +103,26 @@ body
               color: darken($background-light, 20%)
 
       &.graph-info
+        position: relative
+
+        .probability
+          position: absolute
+          top: 15px
+          right: 15px
+
 
         graph
           height: 0
 
           svg 
+            height: 325px
             display: block
             cursor: default
             @include user-select(none)
+
+      chart
+        height: 250px
+        width: 100%
 
 .node
   stroke: $background-medium
@@ -223,21 +237,46 @@ h1,h2,h3,h4,h5,h6
 
   .company
     position: relative
+    width: 49%
+    height: 200px
     background: $background-light
     border: 1px solid darken($background-light, 10%)
     border-radius: 2px
     padding: 10px
 
+    .divider
+      border-right: 1px solid darken($background-light, 10%)
+      height: 180px
+
     .logo
-
-      &:after
-        content: ''
-        position: absolute
-        top: -10px
-        right: -10px
-        @include calc(height, "100% + 20px ")
-        border-right: 1px solid darken($background-light, 10%)
-
-
       h6
         text-align: center
+
+      img
+        display: block
+        margin-left: auto
+        margin-right: auto
+
+    .events
+      padding-left: 15px
+      height: 180px
+      overflow-y: scroll
+
+.recent
+  padding: 20px
+
+.event
+  .th
+    position: relative
+    border-bottom: 11px solid white
+    p
+      font-size: 14px
+      background: white
+      color: black
+      font-weight: bold
+      -webkit-font-smoothing: antialiased
+      padding: 0 3px
+    small
+      position: absolute
+      bottom: -5px
+      font-size: 58%
