--- a/app/views/components/header.jade
+++ b/app/views/components/header.jade
@@ -3,7 +3,7 @@
     ul.title-area
       li.name
         h1
-          a STOCK
+          a CAUS.LY
     section.top-bar-section
       ul.left
         li
